--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:roundIcon="@drawable/ic_small_logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".newspaper.NewsPaperListActivity"></activity>
+        <activity android:name=".newspaper.NewsPaperListActivity" />
         <activity android:name=".headlines.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
